Fixes text align in thumbnails

--- a/wiki-frontend/src/Pages/WikiPage-Article/Style/wikipagecomponent.css
+++ b/wiki-frontend/src/Pages/WikiPage-Article/Style/wikipagecomponent.css
@@ -10,12 +10,12 @@
     font-size: 94%;
     margin-bottom: 2vh;
     width: 200px;
+    /* text-align: left; */
 }
 
 .thumbnail.right {
     float: right;
     margin-left: 15px;
-    text-align: left;
 }
 
 .thumbnail.left {
